# Kairos

./: .gitignore  CHECKPOINTS.md  DESKTOP_INSTALLATION.md  Dockerfile  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements-webui.txt  requirements.txt  run_dev.bat  run_web_ui.bat  run_web_ui.py  setup.cfg  setup.py
backend/: ARCHITECTURE.md  README.md  main.py  requirements.txt
backend/kairos_core/: config.py  logging.py
backend/kairos_core/content/: db.py  models.py
backend/kairos_core/music_id/: acrcloud.py  interfaces.py
backend/kairos_core/nlu/: df_sync.py  dialogflow_cx.py  factory.py  interfaces.py  rule_based.py
backend/kairos_core/orchestrator/: pipeline.py
backend/portal/: router.py
backend/templates/: hitl.html  index.html  portal.html
ci/github/: ci.yml
configs/: default.yaml  production.yaml  propresenter.example.yaml
data/: processed  raw
docs/: architecture.md  checkpoints.md  frd.md  requirements_traceability.md  setup.md  web_ui_guide.md
experiments/exp_001/: config.yaml  notes.md
notebooks/: exploratory.ipynb  training_playground.ipynb
scripts/: evaluate.py  prepare_data.py  run_dev.bat  run_dev.ps1  setup_and_run.bat  setup_and_run.ps1  train.py
src/kairos/: __init__.py  cli.py  config.py  core.py  logging.py  utils.py
tests/: test_db.py  test_nlu_rule.py  test_orchestrator.py
tests/integration/: test_asr.py  test_audio.py  test_end_to_end.py  test_inference.py
tests/unit/: test_core.py  test_core_cli.py  test_http_presentation_client.py  test_intent_processor.py  test_presentation_controller.py
(+27 files in other folders)
