[tool.poetry]
name = "kairos"
version = "0.1.0"
description = "A Voice-Activated Presentation System"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
torch = "^1.9"
transformers = "^4.11"
pyaudio = "^0.2.11"
speechrecognition = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"