[metadata]
name = Kairos
version = 0.1.0
description = A Voice-Activated Presentation System
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/kairos
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    torch
    transformers
    pyaudio
    SpeechRecognition
    Flask

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = src/kairos

[coverage:report]
show_missing = True
skip_covered = True